force-app/src/objects/c2g__codaCreditNoteLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcreditnote</customHelpPage>
    <description>The line items on the credit note, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>c2g__CalculateTaxValue2FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 2 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CalculateTaxValue3FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 3 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CalculateTaxValueFromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteCurrencyDecimalPlaces__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of decimal places used by the credit note currency. Permitted values are 0 and 2. The default is 2.</description>
        <label>Currency Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNote__c</fullName>
        <label>Credit Note Number</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRate2FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 2 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRate3FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 3 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveUnitPriceFromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Destination Company)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationNetValue__c</fullName>
        <formula>c2g__DestinationUnitPrice__c * c2g__DestinationQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought by destination company.</description>
        <label>Destination Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationUnitPrice__c</fullName>
        <description>The unit price for this product for destination company.</description>
        <label>Destination Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeFromWithholding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the product line item is excluded from the Withholding Tax calculation.</description>
        <label>Exclude from Withholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Local GLA)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <formula>Round((c2g__UnitPrice__c * c2g__Quantity__c), IF(ISBLANK(c2g__CreditNoteCurrencyDecimalPlaces__c), 2, c2g__CreditNoteCurrencyDecimalPlaces__c))</formula>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the original invoice of the sales invoice line item.</description>
        <label>Original Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Original Invoice)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProductCode__c</fullName>
        <description>Product Code.</description>
        <formula>c2g__Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProductReference__c</fullName>
        <formula>c2g__Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCode2ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 2 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCode3ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 3 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCodeToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the company site from which the item is shipped. This field is used to calculate tax on the sales credit note line item when the Calculate Tax Using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the company site from which the item is shipped. This field is used to calculate tax on the sales credit note line item when the Calculate Tax Using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The address on the selected company site is not validated.</errorMessage>
            <filterItems>
                <field>fferpcore__CompanySite__c.fferpcore__IsAddressValidated__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__CompanySite__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Ship From)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItemsShipFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the contact to which the item is shipped. This field is used to calculate tax on the sales credit note line item when the Calculate Tax Using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the contact to which the item is shipped. This field is used to calculate tax on the sales credit note line item when the Calculate Tax Using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Ship To)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate1__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate3__c</fullName>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRateTotal__c</fullName>
        <formula>c2g__TaxRate1__c + c2g__TaxRate2__c + c2g__TaxRate3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue1__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue3__c</fullName>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValueTotal__c</fullName>
        <formula>c2g__TaxValue1__c + c2g__TaxValue2__c + c2g__TaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension1Id</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (NewDimension1Id)</relationshipLabel>
        <relationshipName>Sales_Credit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension2Id</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (NewDimension2Id)</relationshipLabel>
        <relationshipName>Sales_Credit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension3Id</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (NewDimension3Id)</relationshipLabel>
        <relationshipName>Sales_Credit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__ToUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffstools__Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Credit Note Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Credit Note Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>c2g__ContactRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( c2g__ShipTo__c ))  &amp;&amp; c2g__CreditNote__r.c2g__Account__c  &lt;&gt;  c2g__ShipTo__r.AccountId</errorConditionFormula>
        <errorDisplayField>c2g__ShipTo__c</errorDisplayField>
        <errorMessage>The account on the contact record must match that on the related sales credit note.</errorMessage>
    </validationRules>
</CustomObject>